# openclaw-workday-agent

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  Makefile  PROTOCOL.md  README.md  SOUL.md  TOOLS.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
.omc/: project-memory.json
orchestrator/: Dockerfile  mix.exs
scripts/: approve-workday.js  get-token.js
skills/: .gitignore  task_approval_check.json  task_approval_check.md  task_approval_check.sh
spec/: API.md  ARCHITECTURE.md  (+13 more)
tools/pipeline_runner/: Dockerfile  alt_calendar.py  cdp_debug.py  cdp_tasks.py  check_apr.py  check_apr6.py  click_quickadd.py  day_row.py  dblclick_cell.py  dblclick_day.py  enter_time_nav.py  enter_times.py  explore_quickadd.py  keyboard_enter.py  login_and_mfa.py  pyproject.toml  rightclick_day.py  test_actions.py  test_buttons.py  test_click.py  test_direct.py  test_nav.py  test_quickadd.py  test_quickadd2.py  test_quickadd3.py  week_view.py
tools/pipeline_runner/.omc/state/: last-tool-error.json
tools/pipeline_runner/pipeline_runner/: __init__.py  __main__.py  browser.py  config.py  main.py  notifications.py  protocol.py
tools/pipeline_runner/pipeline_runner/actions/: __init__.py  sso_login.py  task_approval.py  time_entry.py
tools/pipeline_runner/pipeline_runner/selectors/: __init__.py  workday.py
tools/pipeline_runner/tests/: conftest.py  test_browser.py  test_config.py  test_main.py  test_notifications.py  test_protocol.py  test_sso_login.py  test_task_approval.py  test_task_approval_extended.py  test_time_entry.py  test_time_entry_extended.py
(+58 files in other folders)
