[tool.poetry]
name = "pipeline-runner"
version = "0.1.0"
description = "Headless browser automation engine for Workday HR operations"
authors = []
packages = [{include = "pipeline_runner"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-mock = "^3.12"

[tool.poetry.scripts]
pipeline-runner = "pipeline_runner.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
